# focale

./: LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml  windows-installer.yml  windows-production.yml  windows-staging.yml
packaging/windows/: focale.iss
scripts/: build_windows.ps1
src/focale/: __init__.py  __main__.py  _environment.py  agent_auth.py  alpaca.py  arcsecond_client.py  branding.py  centering.py  cli.py  exceptions.py  gui.py  gui_main.py  hub.py  platesolver.py  services.py  state.py
src/focale/assets/: README.md
tests/: test_agent_auth.py  test_alpaca.py  test_gui_main.py  test_state.py  test_version.py
