[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focale"
version = "0.2.5"
description = "Arcsecond desktop and Hub bootstrap client"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Cedric Foellmi", email = "cedric@arcsecond.io" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
]
dependencies = [
  "arcsecond>=3.7.3",
  "arcsecond-astrometry>=4.3.0",
  "click>=8.1",
  "cryptography>=42",
  "httpx>=0.27",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyinstaller>=6.0",
  "pytest>=8.0",
]

[project.scripts]
focale = "focale.cli:main"

[project.urls]
Homepage = "https://github.com/arcsecond-io/focale"
Issues = "https://github.com/arcsecond-io/focale/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/focale"]
